AUTOMAKE_OPTIONS=foreign
bin_PROGRAMS=Agenda
Agenda_SOURCES=Agenda.cpp AgendaController.h AgendaController.cpp \
		    AgendaService.h AgendaService.cpp Date.h Date.cpp \
		     ErrorInformation.h Language.h Language.cpp\
			User.h User.cpp UserManage.h UserManage.cpp \
			Meeting.h Meeting.cpp MeetingManage.h MeetingManage.cpp
